--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: ROSRider Documentation
 pages:
 - Readme: README.md
-- Getting Started: 01_START.md
-- Software: 02_SOFTWARE.md
-- Parameters: 03_PARAMS.md
-- Launch: 04_LAUNCH.md
+- Getting Started with the ROSRider Board: 01_START.md
+- Installing the ROSRider Software: 02_SOFTWARE.md
+- Parameters Explained: 03_PARAMS.md
+- Launching ROSRider: 04_LAUNCH.md
 theme: readthedocs
