--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: ROSRider Documentation
 pages:
 - Readme: README.md
-- Getting Started with the ROSRider Board: 01_START.md
+- Getting Started: 01_START.md
 - Installing the ROSRider Software: 02_SOFTWARE.md
 - Parameters Explained: 03_PARAMS.md
 - Launching ROSRider: 04_LAUNCH.md
