--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,9 @@
 site_name: ROSRider Documentation
 pages:
 - Readme: README.md
-- Getting Started: 01_START.md
-- Installing the ROSRider Software: 02_SOFTWARE.md
-- Parameters Explained: 03_PARAMS.md
-- Launching ROSRider: 04_LAUNCH.md
+- Getting Started: START.md
+- Installing the ROSRider Software: SOFTWARE.md
+- Parameters: PARAMS.md
+- Launching ROSRider: LAUNCH.md
+- Services: SERVICES.md
 theme: readthedocs
