--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,9 @@ pages:
 - Parameters: PARAMS.md
 - Launching ROSRider: LAUNCH.md
 - Subscribers and Publishers: TOPICS.md
+	- testH
+		- testH1
+		- testH2
 - Services: SERVICES.md
 - Diagnostics: DIAGS.md
 - RVIZ: RVIZ.md
