--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,9 @@ pages:
 - Installing the ROSRider Software: SOFTWARE.md
 - Parameters: PARAMS.md
 - Launching ROSRider: LAUNCH.md
-- Subscribers and Publishers: TOPICS.md
+- Subscribers and Publishers:
+    - 'Native': NATIVE.md
+    - 'Others': TOPICS.md
 - Services: SERVICES.md
 - Diagnostics: DIAGS.md
 - RVIZ: RVIZ.md
@@ -13,7 +15,5 @@ pages:
 - Calibration: CALIBRATION.md
 - Procedures: PROCEDURES.md
 - Network: NETWORK.md
-- About:
-   - 'License': 'SERVICES.md'
-   - 'Release Notes': 'NETWORK.md'
+- About: ABOUT.md
 theme: readthedocs
