--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ pages:
 - Diagnostics: DIAGS.md
 - RVIZ: RVIZ.md
 - Examples: EXAMPLES.md
+- Gazebo: GAZEBO.md
 - Calibration: CALIBRATION.md
 - Procedures: PROCEDURES.md
 - Network: NETWORK.md
